# pointcloud-downsample

./: CMakeLists.txt  README.md  main.cpp
config/: config.yaml
include/: downsample.h
ply/: 1744870787.176924.ply
src/: downsample.cpp
